--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -747,9 +747,12 @@
     "lots_other": "{{count}} lots",
     "mmps_one": "{{count}} MMP",
     "mmps_other": "{{count}} MMPs",
-    "options": "Options",
+    "options_one": "{{count}} option",
+    "options_other": "{{count}} options",
     "optionalDependencies_one": "{{count}} optional dependency",
     "optionalDependencies_other": "{{count}} optional dependencies",
+    "packages_one": "{{count}} package",
+    "packages_other": "{{count}} packages",
     "props_one": "{{count}} prop",
     "props_other": "{{count}} props",
     "readme": "Readme",
