Author tool listing

--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -760,6 +760,8 @@
     "summary": "Summary",
     "textures_one": "{{count}} texture",
     "textures_other": "{{count}} textures",
+    "tools_one": "{{count}} tool",
+    "tools_other": "{{count}} tools",
     "variants_one": "{{count}} variant",
     "variants_other": "{{count}} variants"
   },
