--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -71,6 +71,14 @@
         "description": "Create a backup of this city",
         "label": "Backup"
       },
+      "growify": {
+        "description": "Convert plopped buildings to growables",
+        "label": "Growify"
+      },
+      "historical": {
+        "description": "Mark growables as historical",
+        "label": "Make historical"
+      },
       "removeBackup": {
         "description": "Delete this backup",
         "label": "Delete"
