--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -354,6 +354,7 @@
       "enabling": "Enabling...",
       "installing": "Installing...",
       "removing": "Removing...",
+      "switching": "Selecting...",
       "updating": "Updating..."
     },
     "add": {
