--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -538,6 +538,7 @@
     },
     "hideContents": "Hide contents",
     "openFileLocation": "Open file location",
+    "openFolder": "Open folder",
     "patched": "This file has been patched locally",
     "showContents": "Show contents"
   },
