--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -614,6 +614,10 @@
   },
   "Plugins": {
     "actions": {
+      "cleanPlugins": {
+        "description": "Clean Plugins folder",
+        "label": "Clean"
+      },
       "openFileLocation": {
         "description": "Open file location"
       },
