--- a/src/config/i18n/en.json
+++ b/src/config/i18n/en.json
@@ -198,7 +198,7 @@
     "png.ui": "UI",
     "png.ui-image": "UI Image",
     "s3d": "S3D",
-    "unknown": "Unknown",
+    "other": "Unknown",
     "xml": "XML"
   },
   "DisableIncompatiblePackagesModal": {
